--- a/CherylCrossTest/CherylCrossTest/CherylCrossTest.csproj
+++ b/CherylCrossTest/CherylCrossTest/CherylCrossTest.csproj
@@ -17,12 +17,14 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.2.0-beta2" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.0-beta2" />
+        <PackageReference Include="Avalonia" Version="11.1.4" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.1.4" />
+        
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.0-beta2" />
-        <PackageReference Include="Avalonia.Skia" Version="11.2.0-beta2" />
-        <PackageReference Include="SkiaSharp" Version="3.0.0-preview.4.1" />
+        <!-- <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.0-beta2" /> -->
+        <PackageReference Include="Avalonia.Skia" Version="11.1.4" />
+        <PackageReference Include="SkiaSharp" Version="2.88.8" />
+        <!-- <PackageReference Include="SkiaSharp" Version="3.0.0-preview.4.1" /> -->
     </ItemGroup>
 
     <ItemGroup>
